# embedding-snack

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: cipher_test.jsonl  cipher_train.jsonl  cipher_v2_test.jsonl  cipher_v2_train.jsonl  cipher_v2_val.jsonl  cipher_v3_test.jsonl  cipher_v3_train.jsonl  cipher_v3_val.jsonl  cipher_val.jsonl
experiments/: phase_2_summary.md
experiments/behavior_examples/: ep19_4b_solo_explain_mode.md
experiments/results/: RESULTS.md  phase_2_dialog_text_baseline.jsonl  phase_2_solo_capacity_ceiling.jsonl  phase_3_random_adapter_baseline.jsonl
experiments/run_001/: notes.md
experiments/run_002_4b_solo/: summary.json
experiments/run_003_4b_solo_tagged/: notes.md  summary.json
experiments/run_004_4b_v2_solo/: notes.md  summary.json
experiments/run_005_4b_v3_decmap_solo/: notes.md  summary.json
experiments/run_006_phase2_v3_dialog/: config.json  dialog_failure_modes.md  notes.md  summary.json
experiments/run_007_solo_syskey_safety/: notes.md  summary.json
experiments/run_009_dialog_tabkey/: config.json  notes.md  summary.json
experiments/run_010_random_adapter/: config.json  notes.md  summary.json
experiments/run_phase2_sanity/: summary.json
experiments/run_phase2_smoketest/: config.json  summary.json
notebooks/: 01_sanity.ipynb
scripts/: 01_sanity.py  02_text_baseline.py  03_random_adapter_baseline.py  generate_cipher_data.py  sanity_checks.py
src/: adapter.py  models.py
src/baselines/: adapter_pipeline.py  text_chat.py
src/tasks/: cipher_decode.py
(+22 files in other folders)
