[project]
name = "embedding-snack"
version = "0.1.0"
description = "Cross-model communication via learned adapter on hidden-state vectors."
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "accelerate>=0.34",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.uv]
package = false
